fix #1954 Search results are not visible on any status filter other...

--- a/src/components/Grid/GridView.scss
+++ b/src/components/Grid/GridView.scss
@@ -227,7 +227,8 @@
     }
   }
 
-  .gridview-no-more {
+  .gridview-no-more,
+  .gridview-no-project {
     @include roboto;
     color: $tc-gray-40;
     font-size: 13px;
